// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather main matches snapshot Weather day 1`] = `
Object {
  "card": Object {
    "log_id": "weather-day",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/fact_bg_night_cloudy.png",
                  "type": "image",
                },
              ],
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "items": Array [
                    Object {
                      "font_size": 40,
                      "font_weight": "medium",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "line_height": 56,
                      "text": "29 июля  в Сочи",
                      "text_color": "#80ffffff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "content_alignment_vertical": "center",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "items": Array [
                        Object {
                          "font_size": 146,
                          "font_weight": "medium",
                          "line_height": 146,
                          "text": "+29°",
                          "text_color": "#fff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                        Object {
                          "height": Object {
                            "type": "fixed",
                            "value": 176,
                          },
                          "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/bkn_d_176.png",
                          "margins": Object {
                            "left": 16,
                            "top": 8,
                          },
                          "type": "image",
                          "width": Object {
                            "type": "fixed",
                            "value": 176,
                          },
                        },
                        Object {
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "items": Array [
                            Object {
                              "font_size": 40,
                              "font_weight": "medium",
                              "line_height": 56,
                              "text": "Ощущается как +35°",
                              "text_color": "#80ffffff",
                              "type": "text",
                              "width": Object {
                                "type": "wrap_content",
                              },
                            },
                            Object {
                              "font_size": 40,
                              "font_weight": "medium",
                              "line_height": 56,
                              "margins": Object {
                                "top": 8,
                              },
                              "text": "облачно с прояснениями",
                              "text_color": "#80ffffff",
                              "type": "text",
                              "width": Object {
                                "type": "wrap_content",
                              },
                            },
                          ],
                          "margins": Object {
                            "left": 36,
                          },
                          "orientation": "vertical",
                          "type": "container",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                      ],
                      "orientation": "horizontal",
                      "type": "container",
                    },
                  ],
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                    "top": 48,
                  },
                  "type": "container",
                },
                Object {
                  "alignment_horizontal": "center",
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "item_spacing": 28,
                  "items": Array [
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/128x128/light/bkn_d.png",
                      "temp": "+25°",
                      "time": "Утром",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/128x128/light/bkn_d.png",
                      "temp": "+29°",
                      "time": "Днем",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/128x128/light/skc_n.png",
                      "temp": "+27°",
                      "time": "Вечером",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/128x128/light/skc_n.png",
                      "temp": "+23°",
                      "time": "Ночью",
                      "type": "weatherCard",
                    },
                  ],
                  "orientation": "horizontal",
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                  },
                  "type": "gallery",
                  "width": Object {
                    "type": "wrap_content",
                  },
                },
                Object {
                  "alignment_vertical": "bottom",
                  "content_alignment_vertical": "bottom",
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "item_spacing": 24,
                      "items": Array [],
                      "type": "gallery",
                    },
                  ],
                  "paddings": Object {
                    "bottom": 48,
                    "left": 48,
                    "right": 48,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "orientation": "vertical",
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {
    "weatherCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "fixed",
        "value": 300,
      },
      "items": Array [
        Object {
          "$text": "time",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "margins": Object {
            "top": 24,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 100,
          },
          "margins": Object {
            "top": 20,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 100,
          },
        },
        Object {
          "$text": "temp",
          "font_size": 48,
          "font_weight": "medium",
          "line_height": 64,
          "margins": Object {
            "top": 20,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 150,
      },
    },
    "weatherDayCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "wrap_content",
      },
      "items": Array [
        Object {
          "$text": "weekDay",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$text": "date",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#6fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 148,
          },
          "margins": Object {
            "top": 32,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 148,
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "dayTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "nightTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 32,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 278,
      },
    },
    "weekendDay": Object {
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "content_alignment_horizontal": "left",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "weekday",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "date",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$image_url": "icon",
              "height": Object {
                "type": "fixed",
                "value": 132,
              },
              "type": "image",
              "width": Object {
                "type": "fixed",
                "value": 132,
              },
            },
            Object {
              "$text": "temp_day",
              "font_size": 90,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 146,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "temp_night",
              "font_size": 64,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 76,
              "margins": Object {
                "bottom": 8,
              },
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 24,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
  },
}
`;

exports[`Weather main matches snapshot Weather day hours 1`] = `
Object {
  "card": Object {
    "log_id": "weather_card",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/fact_bg_day_overcast_prec.png",
                  "type": "image",
                },
              ],
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "items": Array [
                    Object {
                      "font_size": 40,
                      "font_weight": "medium",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "line_height": 56,
                      "text": "Завтра утром в Сочи",
                      "text_color": "#80ffffff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "content_alignment_vertical": "center",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "items": Array [
                        Object {
                          "font_size": 146,
                          "font_weight": "medium",
                          "line_height": 146,
                          "text": "+25°",
                          "text_color": "#fff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                        Object {
                          "height": Object {
                            "type": "fixed",
                            "value": 176,
                          },
                          "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/ovc_ra_176.png",
                          "margins": Object {
                            "left": 16,
                            "top": 8,
                          },
                          "type": "image",
                          "width": Object {
                            "type": "fixed",
                            "value": 176,
                          },
                        },
                        Object {
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "items": Array [
                            Object {
                              "font_size": 40,
                              "font_weight": "medium",
                              "line_height": 56,
                              "text": "Ощущается как +28°",
                              "text_color": "#80ffffff",
                              "type": "text",
                              "width": Object {
                                "type": "wrap_content",
                              },
                            },
                            Object {
                              "font_size": 40,
                              "font_weight": "medium",
                              "line_height": 56,
                              "margins": Object {
                                "top": 8,
                              },
                              "text": "дождь",
                              "text_color": "#80ffffff",
                              "type": "text",
                              "width": Object {
                                "type": "wrap_content",
                              },
                            },
                          ],
                          "margins": Object {
                            "left": 36,
                          },
                          "orientation": "vertical",
                          "type": "container",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                      ],
                      "orientation": "horizontal",
                      "type": "container",
                    },
                  ],
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                    "top": 48,
                  },
                  "type": "container",
                },
                Object {
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "item_spacing": 24,
                  "items": Array [
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+23°",
                      "time": "06:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+24°",
                      "time": "07:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_d.png",
                      "temp": "+25°",
                      "time": "08:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_ra.png",
                      "temp": "+25°",
                      "time": "09:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_ra.png",
                      "temp": "+25°",
                      "time": "10:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_ra.png",
                      "temp": "+25°",
                      "time": "11:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "12:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "13:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "14:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "15:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "16:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "17:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "18:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+25°",
                      "time": "19:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                      "temp": "+24°",
                      "time": "20:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+24°",
                      "time": "21:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+24°",
                      "time": "22:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+23°",
                      "time": "23:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+23°",
                      "time": "00:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+23°",
                      "time": "01:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+23°",
                      "time": "02:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/skc_n.png",
                      "temp": "+22°",
                      "time": "03:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/skc_n.png",
                      "temp": "+22°",
                      "time": "04:00",
                      "type": "weatherCard",
                    },
                    Object {
                      "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                      "temp": "+22°",
                      "time": "05:00",
                      "type": "weatherCard",
                    },
                  ],
                  "orientation": "horizontal",
                  "paddings": Object {
                    "left": 24,
                    "right": 48,
                    "top": 48,
                  },
                  "type": "gallery",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "alignment_vertical": "bottom",
                  "content_alignment_vertical": "bottom",
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "item_spacing": 24,
                      "items": Array [],
                      "type": "gallery",
                    },
                  ],
                  "paddings": Object {
                    "bottom": 48,
                    "left": 48,
                    "right": 48,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "orientation": "vertical",
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {
    "weatherCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "fixed",
        "value": 300,
      },
      "items": Array [
        Object {
          "$text": "time",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "margins": Object {
            "top": 24,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 100,
          },
          "margins": Object {
            "top": 20,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 100,
          },
        },
        Object {
          "$text": "temp",
          "font_size": 48,
          "font_weight": "medium",
          "line_height": 64,
          "margins": Object {
            "top": 20,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 150,
      },
    },
    "weatherDayCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "wrap_content",
      },
      "items": Array [
        Object {
          "$text": "weekDay",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$text": "date",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#6fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 148,
          },
          "margins": Object {
            "top": 32,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 148,
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "dayTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "nightTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 32,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 278,
      },
    },
    "weekendDay": Object {
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "content_alignment_horizontal": "left",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "weekday",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "date",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$image_url": "icon",
              "height": Object {
                "type": "fixed",
                "value": 132,
              },
              "type": "image",
              "width": Object {
                "type": "fixed",
                "value": 132,
              },
            },
            Object {
              "$text": "temp_day",
              "font_size": 90,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 146,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "temp_night",
              "font_size": 64,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 76,
              "margins": Object {
                "bottom": 8,
              },
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 24,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
  },
}
`;

exports[`Weather main matches snapshot Weather day part 1`] = `
Object {
  "card": Object {
    "log_id": "weather-day-part",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/fact_bg_morning_cloudy.png",
                  "type": "image",
                },
              ],
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "alignment_horizontal": "center",
                  "content_alignment_vertical": "center",
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "font_size": 48,
                      "font_weight": "regular",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "line_height": 58,
                      "text": "28 июля  утром в Сочи",
                      "text_color": "#fff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "content_alignment_vertical": "center",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "items": Array [
                        Object {
                          "font_size": 240,
                          "font_weight": "medium",
                          "height": Object {
                            "type": "wrap_content",
                          },
                          "line_height": 240,
                          "text": "+25°",
                          "text_color": "#fff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                        Object {
                          "height": Object {
                            "type": "fixed",
                            "value": 220,
                          },
                          "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_220.png",
                          "type": "image",
                          "width": Object {
                            "type": "fixed",
                            "value": 220,
                          },
                        },
                      ],
                      "orientation": "horizontal",
                      "type": "container",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "font_size": 48,
                      "font_weight": "regular",
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "line_height": 58,
                      "text": "малооблачно, ощущается как +29°",
                      "text_color": "#80ffffff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                  ],
                  "type": "container",
                  "width": Object {
                    "type": "wrap_content",
                  },
                },
                Object {
                  "alignment_vertical": "bottom",
                  "content_alignment_vertical": "bottom",
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "item_spacing": 24,
                      "items": Array [],
                      "type": "gallery",
                    },
                  ],
                  "paddings": Object {
                    "bottom": 48,
                    "left": 48,
                    "right": 48,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "orientation": "vertical",
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {
    "weatherCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "fixed",
        "value": 300,
      },
      "items": Array [
        Object {
          "$text": "time",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "margins": Object {
            "top": 24,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 100,
          },
          "margins": Object {
            "top": 20,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 100,
          },
        },
        Object {
          "$text": "temp",
          "font_size": 48,
          "font_weight": "medium",
          "line_height": 64,
          "margins": Object {
            "top": 20,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 150,
      },
    },
    "weatherDayCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "wrap_content",
      },
      "items": Array [
        Object {
          "$text": "weekDay",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$text": "date",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#6fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 148,
          },
          "margins": Object {
            "top": 32,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 148,
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "dayTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "nightTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 32,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 278,
      },
    },
    "weekendDay": Object {
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "content_alignment_horizontal": "left",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "weekday",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "date",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$image_url": "icon",
              "height": Object {
                "type": "fixed",
                "value": 132,
              },
              "type": "image",
              "width": Object {
                "type": "fixed",
                "value": 132,
              },
            },
            Object {
              "$text": "temp_day",
              "font_size": 90,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 146,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "temp_night",
              "font_size": 64,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 76,
              "margins": Object {
                "bottom": 8,
              },
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 24,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
  },
}
`;

exports[`Weather main matches snapshot Weather days range 1`] = `
Object {
  "card": Object {
    "log_id": "weather-days-range",
    "states": Array [
      Object {
        "div": Object {
          "height": Object {
            "type": "match_parent",
            "weight": 1,
          },
          "items": Array [
            Object {
              "background": Array [
                Object {
                  "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/fact_bg_day_clear.png",
                  "type": "image",
                },
              ],
              "height": Object {
                "type": "match_parent",
              },
              "items": Array [
                Object {
                  "font_size": 40,
                  "font_weight": "medium",
                  "line_height": 56,
                  "margins": Object {
                    "left": 48,
                    "top": 48,
                  },
                  "text": "Погода в Сочи на неделю",
                  "text_color": "#fff",
                  "type": "text",
                  "width": Object {
                    "type": "wrap_content",
                  },
                },
                Object {
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "item_spacing": 24,
                  "items": Array [
                    Object {
                      "date": "2 августа",
                      "dayTemp": "+30° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +25°",
                      "type": "weatherDayCard",
                      "weekDay": "Понедельник",
                    },
                    Object {
                      "date": "3 августа",
                      "dayTemp": "+31° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +25°",
                      "type": "weatherDayCard",
                      "weekDay": "Вторник",
                    },
                    Object {
                      "date": "4 августа",
                      "dayTemp": "+31° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +26°",
                      "type": "weatherDayCard",
                      "weekDay": "Среда",
                    },
                    Object {
                      "date": "5 августа",
                      "dayTemp": "+31° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +25°",
                      "type": "weatherDayCard",
                      "weekDay": "Четверг",
                    },
                    Object {
                      "date": "6 августа",
                      "dayTemp": "+31° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +26°",
                      "type": "weatherDayCard",
                      "weekDay": "Пятница",
                    },
                    Object {
                      "date": "7 августа",
                      "dayTemp": "+32° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +25°",
                      "type": "weatherDayCard",
                      "weekDay": "Суббота",
                    },
                    Object {
                      "date": "8 августа",
                      "dayTemp": "+29° ",
                      "icon": "https://dialogs.s3.yandex.net/smart_displays/weather/skc_d_176.png",
                      "nightTemp": " +24°",
                      "type": "weatherDayCard",
                      "weekDay": "Воскресенье",
                    },
                  ],
                  "margins": Object {
                    "bottom": 48,
                    "top": 80,
                  },
                  "orientation": "horizontal",
                  "paddings": Object {
                    "left": 48,
                    "right": 48,
                  },
                  "type": "gallery",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
                Object {
                  "alignment_vertical": "bottom",
                  "content_alignment_vertical": "bottom",
                  "height": Object {
                    "type": "match_parent",
                  },
                  "items": Array [
                    Object {
                      "item_spacing": 24,
                      "items": Array [],
                      "type": "gallery",
                    },
                  ],
                  "paddings": Object {
                    "bottom": 48,
                    "left": 48,
                    "right": 48,
                  },
                  "type": "container",
                  "width": Object {
                    "type": "match_parent",
                  },
                },
              ],
              "orientation": "vertical",
              "type": "container",
              "width": Object {
                "type": "match_parent",
              },
            },
            Object {
              "alignment_horizontal": "right",
              "alignment_vertical": "top",
              "items": Array [
                Object {
                  "actions": Array [
                    Object {
                      "log_id": "close_fullscreen",
                      "url": "centaur://local_command?local_commands=[%7B%22command%22%3A%22close_layer%22%2C%22layer%22%3A%22DIALOG%22%2C%22stop_conversation%22%3Atrue%7D]",
                    },
                  ],
                  "alignment_horizontal": "right",
                  "background": Array [
                    Object {
                      "color": "#1affffff",
                      "type": "solid",
                    },
                  ],
                  "border": Object {
                    "corner_radius": 20,
                  },
                  "height": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                  "image_url": "https://yastatic.net/s3/dialogs/smart_displays/icons/close_wt_border.png",
                  "margins": Object {
                    "right": 36,
                    "top": 36,
                  },
                  "paddings": Object {
                    "bottom": 22,
                    "left": 22,
                    "right": 22,
                    "top": 22,
                  },
                  "preload_required": 1,
                  "scale": "fill",
                  "type": "image",
                  "width": Object {
                    "type": "fixed",
                    "value": 88,
                  },
                },
              ],
              "type": "container",
            },
          ],
          "orientation": "overlap",
          "type": "container",
          "width": Object {
            "type": "match_parent",
            "weight": 1,
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {
    "weatherCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "fixed",
        "value": 300,
      },
      "items": Array [
        Object {
          "$text": "time",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "margins": Object {
            "top": 24,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 100,
          },
          "margins": Object {
            "top": 20,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 100,
          },
        },
        Object {
          "$text": "temp",
          "font_size": 48,
          "font_weight": "medium",
          "line_height": 64,
          "margins": Object {
            "top": 20,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 150,
      },
    },
    "weatherDayCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "wrap_content",
      },
      "items": Array [
        Object {
          "$text": "weekDay",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$text": "date",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#6fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 148,
          },
          "margins": Object {
            "top": 32,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 148,
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "dayTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "nightTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 32,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 278,
      },
    },
    "weekendDay": Object {
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "content_alignment_horizontal": "left",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "weekday",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "date",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$image_url": "icon",
              "height": Object {
                "type": "fixed",
                "value": 132,
              },
              "type": "image",
              "width": Object {
                "type": "fixed",
                "value": 132,
              },
            },
            Object {
              "$text": "temp_day",
              "font_size": 90,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 146,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "temp_night",
              "font_size": 64,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 76,
              "margins": Object {
                "bottom": 8,
              },
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 24,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
  },
}
`;

exports[`Weather teaser matches snapshot 1`] = `
Object {
  "card": Object {
    "log_id": "weather.teasers",
    "states": Array [
      Object {
        "div": Object {
          "background": Array [
            Object {
              "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/fact_bg_day_overcast_prec.png",
              "type": "image",
            },
          ],
          "height": Object {
            "type": "match_parent",
          },
          "items": Array [
            Object {
              "height": Object {
                "type": "wrap_content",
              },
              "items": Array [
                Object {
                  "font_size": 40,
                  "font_weight": "medium",
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "line_height": 56,
                  "text": "Сейчас в Сочи",
                  "text_color": "#80ffffff",
                  "type": "text",
                  "width": Object {
                    "type": "wrap_content",
                  },
                },
                Object {
                  "content_alignment_vertical": "center",
                  "height": Object {
                    "type": "wrap_content",
                  },
                  "items": Array [
                    Object {
                      "font_size": 146,
                      "font_weight": "medium",
                      "line_height": 146,
                      "text": "+25°",
                      "text_color": "#fff",
                      "type": "text",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                    Object {
                      "height": Object {
                        "type": "fixed",
                        "value": 176,
                      },
                      "image_url": "https://dialogs.s3.yandex.net/smart_displays/weather/ovc_ra_176.png",
                      "margins": Object {
                        "left": 16,
                        "top": 8,
                      },
                      "type": "image",
                      "width": Object {
                        "type": "fixed",
                        "value": 176,
                      },
                    },
                    Object {
                      "height": Object {
                        "type": "wrap_content",
                      },
                      "items": Array [
                        Object {
                          "font_size": 40,
                          "font_weight": "medium",
                          "line_height": 56,
                          "text": "Ощущается как +28°",
                          "text_color": "#80ffffff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                        Object {
                          "font_size": 40,
                          "font_weight": "medium",
                          "line_height": 56,
                          "margins": Object {
                            "top": 8,
                          },
                          "text": "дождь",
                          "text_color": "#80ffffff",
                          "type": "text",
                          "width": Object {
                            "type": "wrap_content",
                          },
                        },
                      ],
                      "margins": Object {
                        "left": 36,
                      },
                      "orientation": "vertical",
                      "type": "container",
                      "width": Object {
                        "type": "wrap_content",
                      },
                    },
                  ],
                  "orientation": "horizontal",
                  "type": "container",
                },
              ],
              "paddings": Object {
                "left": 48,
                "right": 48,
                "top": 48,
              },
              "type": "container",
            },
            Object {
              "height": Object {
                "type": "wrap_content",
              },
              "item_spacing": 24,
              "items": Array [
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+23°",
                  "time": "06:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+24°",
                  "time": "07:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_d.png",
                  "temp": "+25°",
                  "time": "08:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_ra.png",
                  "temp": "+25°",
                  "time": "09:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_ra.png",
                  "temp": "+25°",
                  "time": "10:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_ra.png",
                  "temp": "+25°",
                  "time": "11:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "12:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "13:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "14:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "15:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "16:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "17:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "18:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+25°",
                  "time": "19:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/ovc_-ra.png",
                  "temp": "+24°",
                  "time": "20:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+24°",
                  "time": "21:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+24°",
                  "time": "22:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+23°",
                  "time": "23:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+23°",
                  "time": "00:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+23°",
                  "time": "01:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+23°",
                  "time": "02:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/skc_n.png",
                  "temp": "+22°",
                  "time": "03:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/skc_n.png",
                  "temp": "+22°",
                  "time": "04:00",
                  "type": "weatherCard",
                },
                Object {
                  "icon": "https://yastatic.net/weather/i/icons/portal/png/48x48/light/bkn_n.png",
                  "temp": "+22°",
                  "time": "05:00",
                  "type": "weatherCard",
                },
              ],
              "orientation": "horizontal",
              "paddings": Object {
                "left": 24,
                "right": 48,
                "top": 48,
              },
              "type": "gallery",
              "width": Object {
                "type": "match_parent",
              },
            },
          ],
          "orientation": "vertical",
          "type": "container",
          "width": Object {
            "type": "match_parent",
          },
        },
        "state_id": 0,
      },
    ],
  },
  "templates": Object {
    "weatherCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "fixed",
        "value": 300,
      },
      "items": Array [
        Object {
          "$text": "time",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "margins": Object {
            "top": 24,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 100,
          },
          "margins": Object {
            "top": 20,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 100,
          },
        },
        Object {
          "$text": "temp",
          "font_size": 48,
          "font_weight": "medium",
          "line_height": 64,
          "margins": Object {
            "top": 20,
          },
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 150,
      },
    },
    "weatherDayCard": Object {
      "content_alignment_horizontal": "center",
      "height": Object {
        "type": "wrap_content",
      },
      "items": Array [
        Object {
          "$text": "weekDay",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$text": "date",
          "font_size": 40,
          "font_weight": "medium",
          "line_height": 56,
          "text_color": "#6fff",
          "type": "text",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "$image_url": "icon",
          "height": Object {
            "type": "fixed",
            "value": 148,
          },
          "margins": Object {
            "top": 32,
          },
          "type": "image",
          "width": Object {
            "type": "fixed",
            "value": 148,
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "dayTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "nightTemp",
              "font_size": 56,
              "font_weight": "medium",
              "line_height": 66,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 32,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "orientation": "vertical",
      "type": "container",
      "width": Object {
        "type": "fixed",
        "value": 278,
      },
    },
    "weekendDay": Object {
      "height": Object {
        "type": "match_parent",
      },
      "items": Array [
        Object {
          "content_alignment_horizontal": "left",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$text": "weekday",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "date",
              "font_size": 40,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 56,
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
        Object {
          "content_alignment_vertical": "bottom",
          "height": Object {
            "type": "wrap_content",
          },
          "items": Array [
            Object {
              "$image_url": "icon",
              "height": Object {
                "type": "fixed",
                "value": 132,
              },
              "type": "image",
              "width": Object {
                "type": "fixed",
                "value": 132,
              },
            },
            Object {
              "$text": "temp_day",
              "font_size": 90,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 146,
              "text_color": "#fff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
            Object {
              "$text": "temp_night",
              "font_size": 64,
              "font_weight": "medium",
              "height": Object {
                "type": "wrap_content",
              },
              "line_height": 76,
              "margins": Object {
                "bottom": 8,
              },
              "text_color": "#80ffffff",
              "type": "text",
              "width": Object {
                "type": "wrap_content",
              },
            },
          ],
          "margins": Object {
            "top": 24,
          },
          "orientation": "horizontal",
          "type": "container",
          "width": Object {
            "type": "wrap_content",
          },
        },
      ],
      "type": "container",
      "width": Object {
        "type": "match_parent",
        "weight": 1,
      },
    },
  },
}
`;
